--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "npx hardhat test",
+    "compile": "hardhat compile"
   },
   "repository": {
     "type": "git",
@@ -29,6 +33,7 @@
     "ethers": "^5.8.0",
     "hardhat": "^2.26.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.2"
   }
 }
