--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hardhat": "^2.26.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
