--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "isolatedModules": true,
     "lib": ["ESNext", "DOM"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "node"],
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src", "scripts", "test", "hardhat.config.ts"]
 }
