--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.8.0",
     "hardhat": "^2.26.3",
+    "hardhat-gas-reporter": "^2.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vite": "^7.1.2",
